gccida/g0/layout_decl
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/layout_decl/src/stor-layout.c:799:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/layout_decl/src/stor-layout.c:800:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v3; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/layout_decl/src/stor-layout.c:807:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode xmode; // [rsp+20h] [rbp-10h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/layout_decl/src/stor-layout.c:808:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code code; // [rsp+24h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/layout_decl/src/stor-layout.c:871:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[BYTE5( type->block.abstract_origin) >> 1] == MODE_INT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/layout_decl/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/layout_decl/src/obj/stor-layout.o] Error 1
